# C-Step-Counter

./: .gitignore  BUILD  WORKSPACE.bazel  bazel_build.bzl  gtest.BUILD  readme.md
src/: preProcessingStage.c
tests/: test_main.cc
tests/data/: abc.txt  data.txt.240
