load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# new_http_archive (
#     name = "gtest",
#     urls = ["https://github.com/google/googletest/archive/release-1.8.0.zip"],
#     build_file = "gtest.BUILD",
# )

new_git_repository(
    name = "googletest",
    build_file = "@//:gtest.BUILD",
    remote = "https://github.com/google/googletest",
    tag = "release-1.8.0",
)